--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="testimonial-section">
+		<div class="testimonial">
+			<p class="text">This product has completely changed my life for the better!"</p>
+			<p class="author">-John Doe</p>
+	</div>
+		<div class="testimonial">
+      <p class="text">"Exceptional quality and outstanding customer service."</p>
+      <p class="author">- Jane Smith</p>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
