--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Testimonials</h1>
 	<div class="testimonial-section">
 		<div class="testimonial">
 			<p class="text">This product has completely changed my life for the better!"</p>
